--- a/about.html
+++ b/about.html
@@ -1,3 +1,3 @@
 <h1> By Ajit Devkota</h1>
 <h2> This webpage is currently under construction. Come back soon. </h2>
-<link rel="Go back to homepage" href="index.md">
+<a href="index.md">Back to homepage</a>
